--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:form": "cd form-auth && node server.js",
     "start:blocking": "cd blocking-ui && node server.js",
     "start:multipage": "cd multi-page-auth && node server.js",
-    "install-all": "cd basic-auth && npm install && cd ../form-auth && npm install && cd ../blocking-ui && npm install && cd ../multi-page-auth && npm install",
+    "install-all": "npm install && cd basic-auth && npm install && cd ../form-auth && npm install && cd ../blocking-ui && npm install && cd ../multi-page-auth && npm install",
     "setup": "npm run install-all && npm start",
     "build": "npm run install-all",
     "dev": "npm start",
