--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.21.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "connect-sqlite3": "^0.9.0"
   },
   "engines": {
     "node": ">=16.0.0",
